# HiGHS

./: .gitignore  .travis.yml  BUILD  CMakeLists.txt  CZLPVector.cpp  CZLPVector.h  ft.cpp  highs.pc.in  main.cpp  osi-highs.pc.in  update.cpp  update.h
app/: CMakeLists.txt  RunHighs.cpp
check/: CMakeLists.txt  TestBasisSolves.cpp  TestIO.cpp  TestInfo.cpp  TestIpx.cpp  TestLpValidation.cpp  TestOptions.cpp  TestSetup.cpp
check/doctest/: TestPresolveColumnSingletons.cpp
src/: CMakeLists.txt  HConfig.h.in
src/interfaces/: GAMS.cpp  highs_api.cpp  highs_api.h
src/ipm/: CMakeLists.txt  CMakeLists.txt.old
src/lp_data/: HighsRuntimeOptions.h
src/presolve/: ICrash.cpp  Presolve.cpp  Presolve.h
src/test/: KktCh2.cpp
